--- a/sprint-one/src/style/partial/_next-video.scss
+++ b/sprint-one/src/style/partial/_next-video.scss
@@ -21,10 +21,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    line-height: 20px;
+    font-size: 0.9rem;
   }
   &__title {
     font-family: $font-family-demi;
+    line-height: 18px;
+  }
+  &__author {
+    line-height: 30px;
   }
 }
 
